Squashing TGR-990: Workflow UI Playwright Test